--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header, #Hero, #information, #quote, #call, footer{
@@ -43,9 +44,11 @@ ul{
 }
 
 #Hero{
+    gap: 50px;
     padding-top: 30px;
     align-items: center;
     justify-content: space-between;
+    text-align: left;
 }
 
 .HeroMain{
@@ -127,7 +130,7 @@ ul{
 }
 
 .quoteauthor{
-    font-weight: 800;
+    font-weight: 700;
 }
 
 .quoteauthor{
@@ -165,8 +168,5 @@ footer{
     padding-bottom: 30px;
     text-align: center;
     justify-content: center;
-}
-
-footer{
     color: white;
 }
